HUE-5967 [search] Fixed top bar styling for Hue 4

--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/admin.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/admin.less
@@ -20,8 +20,8 @@
 
 .dashboard-admin {
   .search-bar {
-    background-color: #fafafa;
-    border-bottom: 1px solid #e3e3e3;
+    background-color: @cui-gray-050;
+    border-bottom: 1px solid @cui-gray-200;
     -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
@@ -56,8 +56,8 @@
   }
 
   .placeholder {
-    background-color: #F5F5F5;
-    border: 1px solid #E3E3E3;
+    background-color: @cui-gray-050;
+    border: 1px solid @cui-gray-200;
     height: 40px;
   }
 
@@ -68,12 +68,12 @@
 
   .waiting {
     font-size: 196px;
-    color: #DDD;
+    color: @cui-gray-300;
   }
 
   h1.emptyMessage {
     margin-top: 50px;
-    color: #BBB;
+    color: @cui-gray-500;
     line-height: 60px;
   }
 }
