HUE-6077 [frontend] Remove double top border from sortable tables
(cherry picked from commit f7dfd28c3442da8eb9839416fd79d6e2b261e99d)

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
@@ -130,7 +130,7 @@ table.display td.center {
 
 .sorting {
   cursor: pointer;
-  border-top: 1px solid #DCDCDC !important;
+  border-top: 1px solid transparent !important;
   padding-right: 20px !important;
   vertical-align: middle!important;
 }
