HUE-6196 [assist] Add the right assist panel to the Hue 3 editors
It will only be visible when metadata is configured

(cherry picked from commit aa7e4a90cd5757b26bb51dfc8cde5ea3a52617d7)

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook-layout.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook-layout.less
@@ -52,6 +52,14 @@ body {
   outline: none !important;
 }
 
+.right-panel {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  overflow: hidden;
+  outline: none !important;
+}
+
 .context-panel {
   position: fixed;
   background: #fff;
