HUE-6077 [frontend] Moved border to top nav, removed inset shadow

--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -77,6 +77,12 @@
   box-shadow: inset 1px 0 0 rgba(255,255,255,.125)!important;
 }
 
+.hue-no-box-shadow {
+  -webkit-box-shadow: none!important;
+  -moz-box-shadow: none!important;
+  box-shadow: none!important;
+}
+
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
