--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -58,7 +58,6 @@ body {
   position: relative;
   width: 100%;
   background-color: @cui-white;
-  border-top: 2px solid @hue-primary-color-dark;
 }
 
 .svg-hue-logo-main {
@@ -69,10 +68,16 @@ body {
   fill: @hue-trunk;
 }
 
+.top-nav-container {
+  border-bottom: 2px solid @hue-primary-color-dark;
+  z-index: 40000;
+}
+
 .top-nav {
   .display-flex;
   position: relative;
   z-index: 1009;
+  .hue-no-box-shadow;
 }
 
 .top-nav-left {
