HUE-6077 [frontend] Moved top bar specific styles to cui-override

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -23,6 +23,14 @@
   padding-top: 0;
 }
 
+.navbar-default {
+  border-bottom: 2px solid @hue-primary-color-dark;
+  z-index: 40000;
+  .navbar-inner {
+    .hue-no-box-shadow;
+  }
+}
+
 .navbar .navbar-inner {
   padding-right: 24px;
 
