--- a/apps/filebrowser/src/filebrowser/static/filebrowser/less/display.less
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/less/display.less
@@ -15,6 +15,8 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 */
+@import (reference) "cui/colors.less";
+
 #fileviewerComponents {
   .card-body {
     padding: 0;
@@ -28,25 +30,12 @@
 
   #fileArea {
     overflow: auto;
-    background-color: #F5F5F5;
+    background-color: @cui-gray-050;
     position: relative;
     font-size: 12px;
     &.loading {
       opacity: .7;
     }
-  }
-
-  #loader {
-    position: fixed;
-    margin-top: 40px;
-    width: 140px;
-    height: 140px;
-    line-height: 140px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    font-size: 50px;
-    text-align: center;
   }
 
   .binary {
