HUE-6077 [frontend] Override table headers for sorting and fixed malformed FB dom
(cherry picked from commit e1627ec2f49e2ffa9189525865a431480ae35a75)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -82,3 +82,10 @@
 .alert .close {
   width: 16px !important;
 }
+
+table {
+  border-top: none!important;
+  th {
+    border-top: 1px solid @cui-gray-300 !important;
+  }
+}
