HUE-6077 [frontend] Improve hover effects for the result table

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
@@ -472,3 +472,9 @@ div.box {
   color: @cui-gray-800;
   display: block;
 }
+
+.fixed-first-col-hover {
+  background-color: #EEE !important;
+  border-left: 2px solid @hue-primary-color-light !important;
+  padding-left: 14px !important;
+}
