--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -258,7 +258,7 @@ input[type='password']::-ms-reveal {
 }
 
 .actionbar-actions {
-  margin: 0px 0px 10px 0px;
+  margin: 0 0 10px 0;
 }
 
 .status-circle {
