--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -921,8 +921,8 @@
   }
 
   .history-table tbody tr:hover {
-    border-left: 2px solid @cui-default-border-color;
-    border-right: 2px solid @cui-default-border-color;
+    border-left: 2px solid @hue-primary-color-light;
+    border-right: 2px solid @hue-primary-color-light;
   }
 
   .history-table tbody tr:hover td, .history-table tbody tr:hover th {
@@ -931,8 +931,8 @@
 
   .history-table tbody tr.highlight {
     background-color: #f7f7f9;
-    border-left: 2px solid @cui-default-border-color;
-    border-right: 2px solid @cui-default-border-color;
+    border-left: 2px solid @hue-primary-color-light;
+    border-right: 2px solid @hue-primary-color-light;
   }
 
   .ace-highlight .ace-hue {
