HUE-6222 [assist] Restyle sort filter

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -355,6 +355,14 @@ body {
   .hue-ease-transition(color);
 }
 
+.inactive-action-dark,
+.inactive-action-dark a {
+  color: @cui-gray-800;
+  i.fa {
+    color: @cui-gray-600;
+  }
+}
+
 .inactive-action:hover {
   text-decoration: none;
 }
