--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -196,6 +196,11 @@ input[type='password']::-ms-reveal {
     background-color: @hue-primary-color-light !important;
     border-right: 1px solid @hue-primary-color-dark;
   }
+  &.ace_error {
+    background-color: @cui-pink-010 !important;
+    border-right: 1px solid @cui-red-700;
+    border-left: none!important;
+  }
 }
 
 .card {
