HUE-6077 [frontend] Lighter ace error line

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -203,6 +203,14 @@ input[type='password']::-ms-reveal {
   }
 }
 
+.ace-hue {
+  .ace_marker-layer {
+    .ace_error-line {
+      background-color: @cui-pink-010 !important;
+    }
+  }
+}
+
 .card {
   background-color: @cui-white;
 }
