HUE-6077 [frontend] Fixed some red colors

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -297,3 +297,12 @@ input[type='password']::-ms-reveal {
     background-color: @cui-red;
   }
 }
+
+.blue,
+.card-heading-blue {
+  color: @hue-primary-color-dark!important;
+}
+
+.red {
+  color: @cui-red-400!important;
+}
