--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -647,15 +647,15 @@
   }
 
   .progress-success .bar, .progress .bar-success {
-    background-color: #b5cf6b;
+    background-color: @cui-green-400;
   }
 
   .progress-warning .bar, .progress .bar-warning {
-    background-color: #fdae6b;
+    background-color: @cui-orange-500;
   }
 
   .progress-danger .bar, .progress .bar-danger {
-    background-color: #d6616b;
+    background-color: @cui-red-400;
   }
 
   .text-snippet {
