HUE-6077 [frontend] Improve risk styling

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -864,4 +864,23 @@
   .assist-no-entries {
     padding: 5px 10px;
   }
+
+  .risk-list {
+    list-style: none;
+    margin: 0 0 0 10px;
+
+    .risk-list-high {
+      color: @cui-red-700;
+    }
+
+    .risk-list-normal {
+      color: @cui-orange-700;
+    }
+
+    .risk-list-description {
+      margin-left:5px;
+      white-space: normal;
+      font-style: italic;
+    }
+  }
 }
