HUE-6077 [frontend] Simplify the column analysis table style

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -83,7 +83,7 @@
   width: 16px !important;
 }
 
-table {
+table.datatables {
   border-top: none!important;
   th {
     border-top: 1px solid @cui-gray-300 !important;
