HUE-6077 [frontend] Remove inset box shadow from the progress bars

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -89,3 +89,9 @@ table.datatables {
     border-top: 1px solid @cui-gray-300 !important;
   }
 }
+
+.progress {
+  .bar {
+    .hue-no-box-shadow;
+  }
+}
