HUE-6130 [editor] Running query progress bar color conflicting a bit with long gray bar separator position

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -390,6 +390,7 @@
 
   .snippet-code-resizer, .snippet-log-resizer {
     border-top: 1px solid @cui-default-border-color;
+    margin-top: 5px;
     cursor: row-resize;
     text-align: center;
     font-size: 12px;
