--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -226,7 +226,7 @@
 
   # Comma separated list of strings representing the host/domain names that the Hue server can serve.
   # e.g.: localhost,domain1,*
-  ## allowed_hosts=*
+  ## allowed_hosts="*"
 
   # Administrators
   # ----------------
