HUE-6237 [editor] Avoid blinking of the result headers on paste

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
@@ -164,6 +164,12 @@ table.display td.center {
 
 .table-huedatatable {
   margin-bottom: 0!important;
+  thead {
+    th {
+      color: @cui-gray-700!important;
+      background-color: @cui-white;
+    }
+  }
 }
 
 .table-huedatatable td.stripe {
