HUE-6077 [frontend] More subtle assist hover effect

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -300,23 +300,13 @@
 }
 
 .assist-tables > li:hover {
-  background-color: @cui-gray-100;
-  .assist-column {
-    background-color: @cui-white;
-    .assist-actions, .assist-file-actions {
-      background-color: @cui-white;
-    }
-    &:hover {
-      background-color: @cui-gray-100;
-    }
+  .assist-table-link i {
+    color: @cui-blue-500;
   }
   .assist-column:hover {
-    .assist-actions, .assist-file-actions {
-      background-color: @cui-gray-100;
+    .assist-entry {
+      color: @cui-blue-500;
     }
-  }
-  .assist-actions, .assist-file-actions {
-    background-color: @cui-gray-100;
   }
 }
 
